[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "av==15.1.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "cloudpickle==3.1.1",
    "fsspec==2025.9.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "gymnasium==1.2.0",
    "hydra-core==1.3.2",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==2.2.6",
    "omegaconf==2.3.0",
    "opencv-python==4.12.0.88",
    "orjson==3.11.3",
    "packaging==25.0",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "protobuf==6.32.0",
    "pydantic==2.11.7",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "sentry-sdk==2.35.2",
    "tensordict==0.9.1",
    "torch==2.8.0",
    "torchrl==0.9.2",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "triton==3.4.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "wandb==0.21.3",
    "zipp==3.23.0",
]
